# justchat

./: .gitignore  Cargo.toml  README.md  acp_settings.json.example  blog.html  justfile  prd.md
crates/kiro_acp/: Cargo.toml
crates/kiro_acp/examples/: bridge.rs  chat.rs  handshake.rs  spawn.rs
crates/kiro_acp/src/: attachment.rs  bridge.rs  error.rs  idshim.rs  lib.rs  protocol.rs  settings.rs  subprocess.rs  terminals.rs
crates/kiro_acp/tests/: bridge.rs  protocol.rs  subprocess.rs
crates/kiro_tauri/: Cargo.toml  tauri.conf.json
crates/kiro_tauri/capabilities/: default.json
crates/kiro_tauri/icons/: icon.icns
crates/kiro_tauri/src/: main.rs
crates/kiro_tauri/ui/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
crates/kiro_tauri/ui/src/: App.vue  style.css
crates/kiro_tauri/ui/src/components/ai-elements/agent/: AgentHeader.vue
crates/kiro_tauri/ui/src/components/ai-elements/artifact/: ArtifactAction.vue  ArtifactClose.vue
crates/kiro_tauri/ui/src/components/ai-elements/attachments/: AttachmentPreview.vue  AttachmentRemove.vue
crates/kiro_tauri/ui/src/components/ai-elements/chain-of-thought/: ChainOfThoughtHeader.vue
crates/kiro_tauri/ui/src/components/ai-elements/checkpoint/: CheckpointIcon.vue
crates/kiro_tauri/ui/src/components/ai-elements/code-block/: CodeBlockCopyButton.vue
crates/kiro_tauri/ui/src/components/ai-elements/commit/: CommitCopyButton.vue  CommitFileAdditions.vue  CommitFileDeletions.vue  CommitFileIcon.vue  CommitHash.vue
crates/kiro_tauri/ui/src/components/ai-elements/conversation/: ConversationScrollButton.vue
crates/kiro_tauri/ui/src/components/ai-elements/environment-variables/: EnvironmentVariableCopyButton.vue  EnvironmentVariablesToggle.vue
crates/kiro_tauri/ui/src/components/ai-elements/file-tree/: FileTreeFile.vue  FileTreeFolder.vue
crates/kiro_tauri/ui/src/components/ai-elements/inline-citation/: InlineCitationCarouselNext.vue  InlineCitationCarouselPrev.vue
crates/kiro_tauri/ui/src/components/ai-elements/message/: MessageBranchNext.vue  MessageBranchPrevious.vue
crates/kiro_tauri/ui/src/components/ai-elements/mic-selector/: MicSelectorTrigger.vue
crates/kiro_tauri/ui/src/components/ai-elements/open-in-chat/: OpenInItemLink.vue  OpenInTrigger.vue
crates/kiro_tauri/ui/src/components/ai-elements/package-info/: PackageInfoChangeType.vue  PackageInfoName.vue  PackageInfoVersion.vue
crates/kiro_tauri/ui/src/components/ai-elements/plan/: PlanTrigger.vue
crates/kiro_tauri/ui/src/components/ai-elements/prompt-input/: PromptInputActionAddAttachments.vue  PromptInputActionMenuTrigger.vue  PromptInputSpeechButton.vue  PromptInputSubmit.vue
crates/kiro_tauri/ui/src/components/ai-elements/queue/: QueueItemFile.vue  QueueSectionLabel.vue
crates/kiro_tauri/ui/src/components/ai-elements/reasoning/: ReasoningTrigger.vue
crates/kiro_tauri/ui/src/components/ai-elements/sandbox/: SandboxHeader.vue
crates/kiro_tauri/ui/src/components/ai-elements/schema-display/: SchemaDisplayParameters.vue  SchemaDisplayProperty.vue  SchemaDisplayRequest.vue  (+1 more)
crates/kiro_ui/: Cargo.toml
crates/kiro_ui/src/: main.rs  markdown.rs  theme.rs  workspace.rs
site/: blog.html  (+1 more)
(+41 files in other folders)
