[package]
name = "kiro_acp"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "kiro_acp"
path = "src/lib.rs"

# Scripted ACP agent used by integration tests and examples to exercise the
# protocol/bridge without a live kiro-cli. Tests reach it via
# env!("CARGO_BIN_EXE_mock_agent").
[[bin]]
name = "mock_agent"
path = "src/bin/mock_agent.rs"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
