[package]
name = "kiro_tauri"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "kiro_tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kiro_acp = { path = "../kiro_acp" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
rfd = "0.15"
