[package]
name = "kiro_ui"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "kiro_ui"
path = "src/main.rs"

[dependencies]
kiro_acp = { path = "../kiro_acp" }
kiro_core = { path = "../kiro_core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pulldown-cmark.workspace = true

# Zed's GPU-accelerated UI framework, pinned to a specific commit.
gpui = { git = "https://github.com/zed-industries/zed", rev = "a0e37126e9456da0f6855cbfb202fa4efead6fec" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "a0e37126e9456da0f6855cbfb202fa4efead6fec", features = ["font-kit"] }
